--- a/website2/package.json
+++ b/website2/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^6.1.1",
     "@mui/material": "^6.1.1",
     "@react-spring/web": "^9.7.4",
+    "@sendgrid/mail": "^8.1.3",
     "dotenv": "^16.4.5",
     "framer-motion": "^11.9.0",
     "react": "^18.3.1",
